<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvListWeather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardElevation="0dp"
        android:backgroundTint="#00FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/test_time"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <ImageView
                android:id="@+id/icWeatherHourly"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_broken_clouds"
                android:contentDescription="@string/weather_icon" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/test_temp"
                android:textColor="@color/white"
                android:textSize="16sp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>